apps/echoserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.4
        imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: echoserver
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-author-echo-service
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internal
#     alb.ingress.kubernetes.io/target-type: instance
#     alb.ingress.kubernetes.io/tags: Project=aws-eks-load-balancer-controller,Name=ALBIngress
#     alb.ingress.kubernetes.io/group.name: alb-group
#     alb.ingress.kubernetes.io/group.order: '2'
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /meta/
#             pathType: Exact
#             backend:
#               service:
#                 name: echoserver
#                 port: 
#                   number: 80
